--- a/css.css
+++ b/css.css
@@ -35,9 +35,16 @@ h1 {
 }
 
 ul {
+    font-size: 1rem;
     list-style-type: disc;
     margin-left: 20px;
     line-height: 1.6;
+}
+
+li::marker {
+    font-weight: normal; /* Keep bullet weight consistent */
+    font-style: normal;  /* Prevent italics affecting bullet */
+    font-size: 1em; /* Set a consistent size */
 }
 
 li strong {
